Made the contact section mobile responsive. Changed the team members temporary pictures to icons representing their roles on the team. Also fixed the navbar on mobile

--- a/fip/src/index.css
+++ b/fip/src/index.css
@@ -44,10 +44,20 @@ nav {
   /* height: 18vh; */
 }
 
-.svg-img {
+/* .svg-img {
   background-image: url("./assets/images/other/NavSVG4.svg");
   background-size: cover;
   height: 38vh;
+} */
+
+.svg-img-2 {
+  background-image: url("./assets/images/other/NavSVG4.svg");
+  background-size: cover;
+  height: 38vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: -1;
 }
 
 .nav-items {
@@ -232,6 +242,10 @@ nav {
     font-size: 17px;
 }
 
+.member-role {
+  color: lightcoral;
+}
+
 #Contact {
   background-color: var(--primary);
   height: 50vh;
@@ -344,4 +358,47 @@ nav {
   background-repeat: no-repeat;
   background-size: cover;
 } */
+
+@media screen and (max-width: 767px) {
+  .svg-img-2 {
+    display: none;
+    visibility: hidden;
+  }
+
+  .main-image {
+    background-position: center;
+  }
+
+  #Main {
+    margin-top: 0;
+    justify-content: center;
+  }
+
+  #Team {
+    margin-bottom: 10vh;
+  }
+
+  #Contact {
+    height: fit-content;
+  }
+
+  .contact-info {
+    flex-direction: column;
+  }
+
+  .contact-left {
+    text-align: center;
+  }
+
+  .contact-map iframe {
+    width: 100%;
+    height: 20vh;
+  }
+}
+
+@media screen and (max-width: 500px) {
+.contact-form input, .contact-form textarea {
+    font-size: 18px;
+}
+}
 
